src/objects/Checklist_Item_Element__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Checklist Item Elements</relationshipLabel>
        <relationshipName>Checklist_Item_Elements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Checklist_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Checklist Item</label>
        <referenceTo>Checklist_Item__c</referenceTo>
        <relationshipLabel>Checklist Item Elements</relationshipLabel>
        <relationshipName>Checklist_Item_Elements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loan_Condition_Element__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Loan Condition Element</label>
        <referenceTo>Loan_Condition_Element__c</referenceTo>
        <relationshipLabel>Checklist Item Elements</relationshipLabel>
        <relationshipName>Checklist_Item_Elements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Master_Checklist__c</fullName>
        <label>Master Checklist</label>
        <referenceTo>Master_Checklist__c</referenceTo>
        <relationshipLabel>Checklist Item Elements</relationshipLabel>
        <relationshipName>Checklist_Item_Elements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Checklist Item Element</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Checklist Item Element Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Checklist Item Elements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>